--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "update:confirm": "npx npm-check-updates --configFileName .ncurc.json -u"
   },
   "dependencies": {
-    "@xrplf/isomorphic": "file:packages/isomorphic",
+    "@shichengsh001/isomorphic": "file:packages/isomorphic",
     "@xrplf/secret-numbers": "file:packages/secret-numbers",
     "ripple-address-codec": "file:packages/ripple-address-codec",
     "ripple-binary-codec": "file:packages/ripple-binary-codec",
