--- a/packages/isomorphic/sha256/package.json
+++ b/packages/isomorphic/sha256/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@xrplf/isomorphic/sha256",
+  "name": "@shichengsh001/isomorphic/sha256",
   "private": true,
   "main": "../dist/sha256",
   "types": "../dist/sha256",
