--- a/packages/isomorphic/ws/package.json
+++ b/packages/isomorphic/ws/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@xrplf/isomorphic/ws",
+  "name": "@shichengsh001/isomorphic/ws",
   "private": true,
   "main": "../dist/ws",
   "types": "../dist/ws",
