--- a/packages/secret-numbers/package.json
+++ b/packages/secret-numbers/package.json
@@ -29,7 +29,7 @@
     "test": "test"
   },
   "dependencies": {
-    "@xrplf/isomorphic": "^1.0.1",
+    "@shichengsh001/isomorphic": "^1.0.2",
     "ripple-keypairs": "^2.0.0"
   },
   "prettier": "@xrplf/prettier-config",
