--- a/packages/isomorphic/package.json
+++ b/packages/isomorphic/package.json
@@ -38,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:XRPLF/xrpl.js.git"
+    "url": "git@github.com:xpring-eng/xrpl.js.git"
   },
   "license": "ISC",
   "prettier": "@xrplf/prettier-config",
