--- a/packages/ripple-address-codec/package.json
+++ b/packages/ripple-address-codec/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ripple-address-codec",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "description": "encodes/decodes base58 encoded XRP Ledger identifiers",
   "files": [
     "dist/*",
@@ -21,7 +21,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:XRPLF/xrpl.js.git"
+    "url": "git@github.com:xpring-eng/xrpl.js.git"
   },
   "prepublish": "tsc -b",
   "prepublishOnly": "tslint -b ./ && jest",
