--- a/packages/ripple-address-codec/package.json
+++ b/packages/ripple-address-codec/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ripple-address-codec",
+  "name": "@shichengsh001/ripple-address-codec",
   "version": "5.0.1",
   "description": "encodes/decodes base58 encoded XRP Ledger identifiers",
   "files": [
