--- a/packages/ripple-address-codec/package.json
+++ b/packages/ripple-address-codec/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ripple-address-codec",
-  "version": "5.0.2",
+  "version": "5.0.2-beta",
   "description": "encodes/decodes base58 encoded XRP Ledger identifiers",
   "files": [
     "dist/*",
