test real release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -194,7 +194,7 @@ jobs:
         set -euo pipefail
         echo "Packaging ${{ env.PACKAGE_NAME }}"
         find "packages/${{ env.PACKAGE_NAME }}" -maxdepth 1 -name '*.tgz' -delete || true
-        TARBALL=$(npx lerna exec --scope "${{ env.PACKAGE_NAME }}" -- npm pack --json | jq -r '.[0].filename')
+        TARBALL=$(npx lerna exec --scope "@shichengsh001/${{ env.PACKAGE_NAME }}" -- npm pack --json | jq -r '.[0].filename')
         echo "TARBALL=packages/${{ env.PACKAGE_NAME }}/${TARBALL}" >> "$GITHUB_ENV"
       env:
         NPM_CONFIG_USERCONFIG: ${{ runner.temp }}/.npmrc
@@ -322,7 +322,7 @@ jobs:
           npm publish "$PKG" --provenance --access public --registry=https://registry.npmjs.org/
         fi
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_1 }}
 
     - name: Notify Slack success
       if: success()
