--- a/packages/isomorphic/package.json
+++ b/packages/isomorphic/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@xrplf/isomorphic",
+  "name": "@shichengsh001/isomorphic",
   "version": "1.0.1",
   "description": "A collection of isomorphic and tree-shakeable crypto hashes and utils for xrpl.js",
   "keywords": [
@@ -38,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:XRPLF/xrpl.js.git"
+    "url": "git@github.com:xpring-eng/xrpl.js.git"
   },
   "license": "ISC",
   "prettier": "@xrplf/prettier-config",
