--- a/packages/ripple-address-codec/package.json
+++ b/packages/ripple-address-codec/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@scure/base": "^1.1.3",
-    "@xrplf/isomorphic": "^1.0.1"
+    "@shichengsh001/isomorphic": "^1.0.1"
   },
   "keywords": [
     "ripple",
