--- a/packages/xrpl/package.json
+++ b/packages/xrpl/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xrpl",
+  "name": "cheng-xrpl",
   "version": "4.4.1",
   "license": "ISC",
   "description": "A TypeScript/JavaScript API for interacting with the XRP Ledger in Node.js and the browser",
@@ -24,8 +24,8 @@
   "dependencies": {
     "@scure/bip32": "^1.3.1",
     "@scure/bip39": "^1.2.1",
-    "@xrplf/isomorphic": "^1.0.1",
-    "@xrplf/secret-numbers": "^2.0.0",
+    "@shichengsh001/isomorphic": "^1.0.1",
+    "@shichengsh001/secret-numbers": "^2.0.0",
     "bignumber.js": "^9.0.0",
     "eventemitter3": "^5.0.1",
     "ripple-address-codec": "^5.0.0",
@@ -69,7 +69,7 @@
   "prettier": "@xrplf/prettier-config",
   "repository": {
     "type": "git",
-    "url": "git@github.com:XRPLF/xrpl.js.git"
+    "url": "git@github.com:xpring-eng/xrpl.js.git"
   },
   "readmeFilename": "README.md",
   "keywords": [
