--- a/packages/isomorphic/package.json
+++ b/packages/isomorphic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shichengsh001/isomorphic",
-  "version": "1.0.1",
+  "version": "2.0.0-rc.1",
   "description": "A collection of isomorphic and tree-shakeable crypto hashes and utils for xrpl.js",
   "keywords": [
     "crypto",
