--- a/packages/isomorphic/package.json
+++ b/packages/isomorphic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shichengsh001/isomorphic",
-  "version": "2.0.0-rc.1",
+  "version": "2.0.0-rc.2",
   "description": "A collection of isomorphic and tree-shakeable crypto hashes and utils for xrpl.js",
   "keywords": [
     "crypto",
@@ -44,5 +44,6 @@
   "prettier": "@xrplf/prettier-config",
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "gitHead": "9ecf80ce3767e32a9009a14e4ec2f38f71c3acb3"
 }
