--- a/packages/ripple-binary-codec/package.json
+++ b/packages/ripple-binary-codec/package.json
@@ -43,5 +43,6 @@
   "prettier": "@xrplf/prettier-config",
   "engines": {
     "node": ">= 18"
-  }
+  },
+  "gitHead": "9ecf80ce3767e32a9009a14e4ec2f38f71c3acb3"
 }
