--- a/packages/xrpl/package.json
+++ b/packages/xrpl/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xrpl",
+  "name": "cheng-xrpl",
   "version": "4.4.1",
   "license": "ISC",
   "description": "A TypeScript/JavaScript API for interacting with the XRP Ledger in Node.js and the browser",
@@ -69,7 +69,7 @@
   "prettier": "@xrplf/prettier-config",
   "repository": {
     "type": "git",
-    "url": "git@github.com:XRPLF/xrpl.js.git"
+    "url": "git@github.com:xpring-eng/xrpl.js.git"
   },
   "readmeFilename": "README.md",
   "keywords": [
