--- a/packages/xrpl/package.json
+++ b/packages/xrpl/package.json
@@ -69,7 +69,7 @@
   "prettier": "@xrplf/prettier-config",
   "repository": {
     "type": "git",
-    "url": "git@github.com:xping-eng/xrpl.js.git"
+    "url": "git@github.com:xpring-eng/xrpl.js.git"
   },
   "readmeFilename": "README.md",
   "keywords": [
