--- a/packages/xrpl/package.json
+++ b/packages/xrpl/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "xrpl",
-  "version": "4.4.2",
+  "name": "cheng-xrpl",
+  "version": "4.4.12-beta.9",
   "license": "ISC",
   "description": "A TypeScript/JavaScript API for interacting with the XRP Ledger in Node.js and the browser",
   "files": [
