--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,7 @@ jobs:
           GH_TOKEN: ${{ github.token }}
           REPO: ${{ github.repository }}
           RELEASE_BRANCH: ${{ github.event.inputs.release_branch_name }}
+          PKG_NAME: ${{ github.event.inputs.package_name }}
           NPM_DIST_TAG: ${{ github.event.inputs.npmjs_dist_tag }}
         run: |
           set -euo pipefail
