--- a/.github/workflows/faucet_test.yml
+++ b/.github/workflows/faucet_test.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
   workflow_dispatch:
   pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
+    types: [ready_for_review]
   workflow_call:
     inputs:
       git_ref:
